--- a/css/custom-styles.css
+++ b/css/custom-styles.css
@@ -1,3 +1,26 @@
+body{
+    transition-duration: 0.8s;
+}
+
+.dark-mode{
+    background-color: #2c3034;
+    color: #f1f1f1;
+}
+
+section:nth-child(even){
+    background-color: rgba(105, 105, 105, 0.05);
+}
+
+.icon{
+    color: #ffffff;
+    padding: 0 10px;
+    transition: 0.15s;
+}
+
+.icon:hover{
+    color: #ffc800;
+}
+
 .dropdown:hover .dropdown-menu {
     display: block;
 }
