Adjusted Portfolio BS CSS for Dark-Mode support

--- a/css/styles.css
+++ b/css/styles.css
@@ -11017,7 +11017,7 @@ header.masthead .masthead-heading {
 #portfolio .portfolio-item .portfolio-caption {
   padding: 1.5rem;
   text-align: center;
-  background-color: #fff;
+  background-color: rgba(164, 164, 164, 0.1);
 }
 #portfolio .portfolio-item .portfolio-caption .portfolio-caption-heading {
   font-size: 1.5rem;
