--- a/css/custom-styles.css
+++ b/css/custom-styles.css
@@ -32,3 +32,33 @@ section:nth-child(even){
 .text-justify{
     text-align: justify;
 }
+
+header.masthead_orders {
+    padding-top: 10.5rem;
+    padding-bottom: 6rem;
+    margin-top: 100px;
+    height: 500px;
+    text-align: center;
+    color: #000;
+    background-image: url("../assets/img/orders/top-backgound.jpg");
+    background-repeat: no-repeat;
+    background-attachment: scroll;
+    background-position: top center;
+    background-size: cover;
+}
+
+header.masthead_orders .masthead-subheading {
+    font-size: 1.5rem;
+    font-style: italic;
+    line-height: 1.5rem;
+    margin-bottom: 25px;
+    font-family: "Roboto Slab", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+}
+
+header.masthead_orders .masthead-heading {
+    font-size: 3.25rem;
+    font-weight: 700;
+    line-height: 3.25rem;
+    margin-bottom: 2rem;
+    font-family: "Montserrat", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+}
