--- a/css/custom-styles.css
+++ b/css/custom-styles.css
@@ -3,7 +3,7 @@ body{
 }
 
 .dark-mode{
-    background-color: #2c3034;
+    background-color: #212529;
     color: #f1f1f1;
 }
 
@@ -33,10 +33,13 @@ section:nth-child(even){
     text-align: justify;
 }
 
+.section-order-page {
+    padding: 6rem 0;
+}
+
 header.masthead_orders {
-    padding-top: 10.5rem;
+    padding-top: 12.5rem;
     padding-bottom: 6rem;
-    margin-top: 100px;
     height: 500px;
     text-align: center;
     color: #000;
@@ -48,7 +51,7 @@ header.masthead_orders {
 }
 
 header.masthead_orders .masthead-subheading {
-    font-size: 1.5rem;
+    font-size: 2.0rem;
     font-style: italic;
     line-height: 1.5rem;
     margin-bottom: 25px;
@@ -56,7 +59,7 @@ header.masthead_orders .masthead-subheading {
 }
 
 header.masthead_orders .masthead-heading {
-    font-size: 3.25rem;
+    font-size: 3.5rem;
     font-weight: 700;
     line-height: 3.25rem;
     margin-bottom: 2rem;
