--- a/css/custom-styles.css
+++ b/css/custom-styles.css
@@ -47,3 +47,8 @@ section:nth-child(even){
     background: rgba(164, 164, 164, 0.1);
     padding: 20px;
 }
+
+.location-map{
+    width: 100%;
+    height: 350px;
+}
