--- a/css/custom-styles.css
+++ b/css/custom-styles.css
@@ -176,7 +176,7 @@ label.radio:hover {
   padding: 0 0 0 60px;
   margin-bottom: 0;
   font-size: 14px;
-  color: #bab3a6;
+  color: #a9997b;
 }
 
 .contact .info .open-hours, .contact .info .email, .contact .info .phone {
