--- a/css/custom-styles.css
+++ b/css/custom-styles.css
@@ -170,7 +170,7 @@ label.radio:hover {
 .contact .info p {
   padding: 0 0 0 60px;
   margin-bottom: 0;
-  color: #a9997b;
+  color: #8f8f8f;
 }
 
 .contact .info .open-hours, .contact .info .email, .contact .info .phone {
