Added more content to the portfolio

--- a/css/custom-styles.css
+++ b/css/custom-styles.css
@@ -208,3 +208,9 @@ li.active {
   width: 140px;
   text-align: center;
 }
+
+.portfolio-item .img-fluid,
+.portfolio-modal .img-fluid{
+  object-fit: cover;
+  aspect-ratio: 4/3;
+}
