--- a/css/custom-styles.css
+++ b/css/custom-styles.css
@@ -202,9 +202,10 @@ label.radio:hover {
 
 .portfolio-item .img-fluid,
 .portfolio-modal .img-fluid,
-.blog-item .img-fluid{
+.blog-item .img-fluid,
+.carousel img{
   object-fit: cover;
-  aspect-ratio: 4/3;
+  aspect-ratio: 5/2;
 }
 
 .blog-item{
