--- a/css/custom-styles.css
+++ b/css/custom-styles.css
@@ -164,6 +164,10 @@ label.radio:hover {
   margin-bottom: 5px;
 }
 
+.contact .info span {
+  color: #ffc800;
+}
+
 .contact .info p {
   padding: 0 0 0 60px;
   margin-bottom: 0;
@@ -317,5 +321,3 @@ label.radio:hover {
   margin-bottom: 25px;
   font-family: "Roboto Slab", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
 }
-
-
