--- a/css/custom-styles.css
+++ b/css/custom-styles.css
@@ -213,7 +213,8 @@ label.radio:hover {
   aspect-ratio: 2/1;
 }
 
-.blog-item, .side-bar{
+.blog-item,
+.side-bar{
   background: rgba(164, 164, 164, 0.1);
 }
 
