--- a/css/styles.css
+++ b/css/styles.css
@@ -10950,7 +10950,7 @@ header.masthead {
   color: #fff;
   background-image: url("../assets/img/header-bg.jpg");
   background-repeat: no-repeat;
-  background-attachment: scroll;
+  background-attachment: fixed;
   background-position: center center;
   background-size: cover;
 }
