Border esthetic on carrossel

--- a/css/styles.css
+++ b/css/styles.css
@@ -5786,6 +5786,9 @@ textarea.form-control-lg {
 
 .carousel {
   position: relative;
+  border: 4.5px solid black;
+  box-shadow: 10px 5px 10px 1px rgba(10, 10, 10, 0.4);
+  border-radius: 7px;
 }
 
 .carousel.pointer-event {
