--- a/css/custom-styles.css
+++ b/css/custom-styles.css
@@ -323,3 +323,7 @@ label.radio:hover {
   margin-bottom: 25px;
   font-family: "Roboto Slab", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
 }
+
+.produtos{
+  color:black;
+}
