--- a/css/custom-styles.css
+++ b/css/custom-styles.css
@@ -3,6 +3,10 @@ body {
   transition-duration: 0.8s;
 }
 
+.dark-mode .text-muted{
+  color: #a0a0a0 !important;;
+}
+
 .dark-mode {
   background-color: #2c3034;
   color: #f1f1f1;
