--- a/css/styles.css
+++ b/css/styles.css
@@ -8094,7 +8094,7 @@ textarea.form-control-lg {
 
 .text-muted {
   --bs-text-opacity: 1;
-  color: #6c757d !important;
+  color: #606060 !important;
 }
 
 .text-black-50 {
