--- a/css/custom-styles.css
+++ b/css/custom-styles.css
@@ -1,3 +1,5 @@
+/* Related to Dark-Mode functionality */
+
 body {
   transition-property: background-color, color;
   transition-duration: 0.8s;
@@ -12,6 +14,17 @@ body {
   color: #f1f1f1;
 }
 
+.icon {
+  color: #ffffff;
+  padding: 8px 0;
+}
+
+.icon:hover {
+  color: #ffc800;
+}
+
+/* Dropdown-Menu styling and functionality */
+
 .dropdown-menu {
   background-color: #2c3034;
 }
@@ -25,29 +38,26 @@ body {
   background-color: rgba(105, 105, 105, 0.2) !important;
 }
 
+.dropdown:hover .dropdown-menu {
+  display: block !important;
+}
+
+/* Section background settings */
+
 section:nth-child(even) {
   background-color: rgba(105, 105, 105, 0.05);
 }
 
-.icon {
-  color: #ffffff;
-  padding: 8px 0;
-}
-
-.icon:hover {
-  color: #ffc800;
-}
+/* Text display settings */
 
 .text-justify {
   text-align: justify;
 }
 
+/* About section styling */
+
 #about img {
   border-radius: 50%;
-}
-
-.dropdown:hover .dropdown-menu {
-  display: block !important;
 }
 
 #about p{
@@ -56,6 +66,8 @@ section:nth-child(even) {
   margin-bottom: 0.5rem;
   line-height: 1.5
 }
+
+/* Testimonials section styling */
 
 #testimonials img {
   height: 70px;
@@ -68,99 +80,7 @@ section:nth-child(even) {
   padding: 20px;
 }
 
-.navbar-spacer {
-  height: 3rem;
-}
-
-.card {
-  width: 550px;
-  background-color: rgba(164, 164, 164, 0.1);
-  border: none;
-  border-radius: 12px;
-}
-
-label.radio {
-  cursor: pointer;
-  width: 100%;
-  text-align: center;
-}
-
-label.radio input {
-  position: absolute;
-  top: 0;
-  left: 0;
-  visibility: hidden;
-  pointer-events: none;
-}
-
-label.radio span {
-  padding: 7px 14px;
-  border: 2px solid #eee;
-  display: inline-block;
-  color: #e5bc03;
-  border-radius: 10px;
-  width: 100%;
-  height: 48px;
-  line-height: 27px;
-}
-
-label.radio input:checked + span {
-  border-color: #f6d25b;
-  background-color: #faf281;
-  color: #000000;
-  border-radius: 9px;
-  height: 48px;
-  line-height: 27px;
-}
-
-label.radio:hover {
-  color: #fff;
-  background-color: rgba(164, 164, 164, 0.1);
-  border-radius: 10px;
-}
-
-.form-control {
-  margin-top: 10px;
-  height: 48px;
-  border: 2px solid #eee;
-  border-radius: 10px;
-}
-
-.form-control:focus {
-  box-shadow: none;
-  border: 2px solid #039be5;
-}
-
-.agree-text {
-  font-size: 14px;
-}
-
-.terms {
-  font-size: 14px;
-  text-decoration: none;
-  color: #03b0e5;
-}
-
-.confirm-button {
-  height: 50px;
-  border-radius: 10px;
-}
-
-.textarea {
-  display: block;
-  width: 100%;
-  overflow: hidden;
-  resize: both;
-  min-height: 48px;
-  line-height: 20px;
-  margin-top: 10px;
-  height: 48px;
-  border: 2px solid #eee;
-  border-radius: 10px;
-  min-width: 100%;
-  max-width: 100%;
-  padding: 12px 10px;
-}
+/* Contact section styling */
 
 .contact .info {
   width: 100%;
@@ -186,39 +106,7 @@ label.radio:hover {
   margin-top: 40px;
 }
 
-.gallerygrid {
-  display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
-  grid-gap: 15px;
-}
-
-.imagebox {
-  aspect-ratio: 1;
-}
-
-.image {
-  width: 0px;
-  height: 0px;
-  min-height: 100%;
-  min-width: 100%;
-  display: block;
-  object-fit: fill;
-}
-
-.sector {
-  width: 100%;
-  border: 10px solid rgb(202, 186, 4);
-  padding: 10px;
-  text-align: center;
-}
-
-.portfolio-item .img-fluid,
-.portfolio-modal .img-fluid,
-.blog-item .img-fluid,
-.carousel img{
-  object-fit: cover;
-  aspect-ratio: 2/1;
-}
+/* Blog type pages styling */
 
 .blog-item,
 .side-bar{
@@ -235,102 +123,16 @@ label.radio:hover {
   border-radius: 50%;
 }
 
-.parallax {
-  /* Full height */
-  height: 100%; 
+/* Misc */
 
-  /* Create the parallax scrolling effect */
-  background-attachment: fixed;
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
+.navbar-spacer {
+  height: 3rem;
 }
 
-.container-parallax {
-  align-items: center;
-  width:100%;
-  display: flex;
-  justify-content: center;
-  text-align: center justify;
-}
-
-.parallax-text {
-  width: 100%; /* Can be in percentage also. */
-  height: auto;
-  margin: 0 auto;
-  padding: 14%;
-  position: relative;
-  text-align: center;
-  display: block;
-  color: white;
-}
-
-.titulo {
-  font-size: 4.5rem;
-  font-weight: 700;
-  line-height: 3.25rem;
-  margin-bottom: 2rem;
-  font-family: "Montserrat", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
-}
-
-.subtitulo {
-  font-size: 2.2rem;
-  font-style: italic;
-  line-height: 1.5rem;
-  margin-bottom: 25px;
-  font-family: "Roboto Slab", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
-}
-
-
-.parallax {
-  height: 100%; 
-  background-attachment: fixed;
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
-}
-
-/*Disable parallax effect on mobiles due to bugs*/
-@media only screen and (max-width:749px) {
-  .parallax {
-    background-attachment: inherit;
-  }
-}
-
-.container-parallax {
-  align-items: center;
-  width:100%;
-  display: flex;
-  justify-content: center;
-  text-align: center justify;
-}
-
-.parallax-text {
-  width: 100%; /* Can be in percentage also. */
-  height: auto;
-  margin: 0 auto;
-  padding: 16%;
-  position: relative;
-  text-align: center;
-  display: block;
-}
-
-.titulo {
-  font-size: 4rem;
-  font-weight: 700;
-  line-height: 3.25rem;
-  margin-bottom: 2rem;
-  font-family: "Montserrat", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
-}
-
-.subtitulo {
-  font-size: 2.5rem;
-  font-style: italic;
-  line-height: 1.5rem;
-  margin-bottom: 25px;
-  font-family: "Roboto Slab", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
-}
-
-.produtos{
-  color:#939393;
+.portfolio-item .img-fluid,
+.portfolio-modal .img-fluid,
+.blog-item .img-fluid,
+.carousel img{
+  object-fit: cover;
+  aspect-ratio: 2/1;
 }
